Minor code cleanup and missing file added (PackageReferenceMarker.cs)

--- a/src/NugetAuditor/NugetAuditor.VSIX/Properties/Resources.resx
+++ b/src/NugetAuditor/NugetAuditor.VSIX/Properties/Resources.resx
@@ -138,6 +138,9 @@
   <data name="NoVulnarebilitiesFound" xml:space="preserve">
     <value>No vulnerabilities found.</value>
   </data>
+  <data name="SkippingIgnoredPackage" xml:space="preserve">
+    <value>Skipping ignored package '{0}'.</value>
+  </data>
   <data name="VulnerabilitiesFound" xml:space="preserve">
     <value>Vulnerabilities found in {0} package(s). See Error List for details.</value>
   </data>
