--- a/src/NugetAuditor/NugetAuditor.VSIX/VSPackage.resx
+++ b/src/NugetAuditor/NugetAuditor.VSIX/VSPackage.resx
@@ -127,4 +127,13 @@
   <data name="400" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\OSSAuditPackage.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="1110" xml:space="preserve">
+    <value>VSAsyncPackage Extension</value>
+  </data>
+  <data name="1112" xml:space="preserve">
+    <value>VSAsyncPackage Visual Stuido Extension Detailed Info</value>
+  </data>
+  <data name="1400" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\VSAsyncPackage.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
